CKA-Certified-Kubernetes-Administrator/exercises/05-networkpolicy/backend.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    role: backend
    run: backend
  name: backend
  namespace: exercise-05
spec:
  containers:
  - image: nginx:1.27
    name: backend
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
